--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
-    "file-loader": "^6.2.0",
-    "html-loader": "^4.2.0",
+    "file-loader": "^6.1.1",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "normalize.css": "^8.0.1"
   }
 }
